--- a/style.css
+++ b/style.css
@@ -371,6 +371,7 @@ p {
 	font-size: 1.8rem;
 	font-weight: 500;
 	margin-top: 10px;
+	color: white;
 }
 #projects .project-info p {
 	color: white;
@@ -389,7 +390,7 @@ p {
 	height: 100%;
 	width: 100%;
 	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-	opacity: .7;
+	opacity: .3;
 }
 #projects .project-img img {
 	transition: .3s ease transform;
