--- a/style.css
+++ b/style.css
@@ -317,8 +317,13 @@ p {
 #skills .service-item h2 {
   font-size: 2rem;
   color: white;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   text-transform: uppercase;
+}
+#skills .service-item h3 {
+  font-size: 1.3rem;
+  color: yellow;
+  margin-bottom: 10px;
 }
 #skills .service-item p {
   color: white;
